# gio-pyio

./: .readthedocs.yaml  meson.build  pyproject.toml  streamwarpper_old.py
.github/workflows/: python-package.yml  python-publish.yml
docs/source/: index.rst
gio_pyio/: __init__.py  gio_pyio.c  gio_pyio.h  meson.build  streamwrapper.c  streamwrapper.h
src/gio_pyio/: __init__.py
tests/: test_gio_pyio.py
