[project]
name = "gio-pyio"
version = "0.0.6"
authors = [
  { name="Christoph Matthias Kohnen", email="mail@cmkohnen.de" },
]
description = "Python like IO for Gio"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "PyGObject >= 3.42.2",
]

[project.urls]
Repository = "https://github.com/cmkohnen/gio-pyio"
Issues = "https://github.com/cmkohnen/gio-pyio/issues"
Documentation = "https://gio-pyio.readthedocs.io"

[build-system]
build-backend = "mesonpy"
requires = ["meson-python", "meson>=1.1.0", "ninja", "setuptools_scm"]
